<?xml version="1.0"?>
<package format="2">
  <name>gl_test_field</name>
  <version>0.0.0</version>
  <description>The gl_test_field package</description>

  <maintainer email="k.koide@aist.go.jp">k.koide</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslib</depend>

</package>
