<?xml version="1.0"?>
<package format="2">
  <name>iridescence</name>
  <version>0.0.0</version>
  <description>A point cloud viewer for rapid prototyping of 3D algorithms</description>

  <maintainer email="k.koide@aist.go.jp">k.koide</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslib</depend>

</package>
