<?xml version="1.0"?>
<package format="2">
  <name>iridescence</name>
  <version>1.0.0</version>
  <description>A point cloud viewer for rapid prototyping of 3D algorithms</description>

  <maintainer email="k.koide@aist.go.jp">k.koide</maintainer>

  <license>MIT</license>

  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>eigen</build_depend>
  <depend>opengl</depend>
  <depend>libglm-dev</depend>
  <depend>libglfw3-dev</depend>
  <depend>libpng-dev</depend>
  <depend>libjpeg</depend>
  <depend>assimp-dev</depend>

  <export>
    <build_type>cmake</build_type>
  </export>

</package>
