[build-system]
requires = ["setuptools", "scikit-build>=0.13", "scikit-build-core >=0.10", "pybind11 >2.10.0"]
build-backend = "scikit_build_core.setuptools.build_meta"

[tool.scikit-build.cmake.define]
BUILD_PYTHON_BINDINGS = true
BUILD_SHARED_LIBS = false

[tool.cibuildwheel.linux]
before-all = "yum install -y libpng-devel libjpeg-turbo-devel wayland-devel mesa-libGL-devel libX11-devel libXcursor-devel libXinerama-devel libXrandr-devel libXi-devel libxkbcommon-devel"

[tool.cibuildwheel]
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
build = "*"
skip = "pp* *-win32 *_i686 *musllinux*" # Don't build for PyPy, Win32, i686
